update cov description

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -523,7 +523,7 @@
     "[VICReg](https://arxiv.org/pdf/2105.04906) is a contrastive learning method that incoroporates three principles for learning meaningful representations:\n",
     "1. Variance - within a batch, features should be diverse. This prevents representational collapse\n",
     "2. Invariance - features should be invariant to transformations of the input\n",
-    "3. Covariance - latent features should be independent (i.e. identity covariance)\n",
+    "3. Covariance - latent features should be independent (i.e. diagonal covariance)\n",
     "\n",
     "This method combines three loss functions to enforce these principles. \n",
     "\n",
