incorporate Ritviks comments

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -926,6 +926,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -966,30 +977,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "110"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(np.unique(pred['fov_seg'].squeeze()[30]))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can then use these segmentations to extract single cell images from the FOVs and normalize them. We exclude cells that are too small (likely noise from our segmentation model) or cells that touch the edge of the FOV, rotate them in the YX plane to align the major axis of the cell with the X axis, and crop them to a fixed size."
+    "We can then use these segmentations to extract single cell images from the FOVs and normalize their intensities. We exclude cells that are too small (likely noise from our segmentation model) or cells that touch the edge of the FOV, rotate them in the YX plane to align the major axis of the cell with the X axis, and crop them to a fixed size."
    ]
   },
   {
@@ -1127,7 +1118,7 @@
    "metadata": {},
    "source": [
     "### Data Config\n",
-    "Here, we implement a relatively complex data pipeline - we resize our single cell images to half resolution, create a copy of that image and have two parallel augmentation paths used for contrastive learning."
+    "Here, we implement a relatively complex data pipeline - we resize our single cell images to half resolution, create a copy of that image and augment each copy separately for contrastive learning."
    ]
   },
   {
@@ -2337,13 +2328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature Analysis\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Applications to Perturbation Detection and Interpretation\n",
     "To get a rough sense of the impact of various drug treatments on our structures of interest, we can start our analysis by visualizing the learned features in a 2D space using PCA. "
    ]
   },
@@ -2566,7 +2551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tubulin and Paclitaxol."
+    "## Tubulin and Paclitaxol"
    ]
   },
   {
