--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -668,7 +668,12 @@
     "\n",
     "[3-6] ZYX vector fields that predict the direction to the nearest object boundary from channel 1 in each direction \n",
     "\n",
-    "During postprocessing, we use the Ch.2 to identify foreground pixels and then split objects using the vector fields and a connected component labeling of Ch. 1. "
+    "During postprocessing, we use the Ch.2 to identify foreground pixels and then split objects using the vector fields and a connected component labeling of Ch. 1. \n",
+    "\n",
+    "##### References\n",
+    "1. Cellpose3: one-click image restoration for improved cellular segmentation. Carsen Stringer, Marius Pachitariu. bioRxiv 2024.02.10.579780; doi: https://doi.org/10.1101/2024.02.10.579780\n",
+    "2. Cutler, K.J., Stringer, C., Lo, T.W. et al. Omnipose: a high-precision morphology-independent solution for bacterial cell segmentation. Nat Methods 19, 1438–1448 (2022). https://doi.org/10.1038/s41592-022-01639-4\n",
+    "3. SKOOTS: Skeleton oriented object segmentation for mitochondria. Christopher J Buswinka, Hidetomi Nitta, Richard T. Osgood, Artur A. Indzhykulian. bioRxiv 2023.05.05.539611; doi: https://doi.org/10.1101/2023.05.05.539611"
    ]
   },
   {
