add colab instructions

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# UNCOMMENT AND RUN IF IN COLAB\n",
+    "# ! git clone https://github.com/AllenCell/i2k_workshop_2024.git\n",
+    "# %cd i2k_workshop_2024\n",
+    "# ! pip install -r requirements.txt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
