--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -30,13 +30,11 @@
     "This hands-on workshop will introduce you to CytoDL, a powerful deep learning framework developed by the Allen Institute for Cell Science. CytoDL is designed to streamline the analysis of biological images, including 2D and 3D data represented as images, point clouds, and tabular formats.\n",
     "You will learn how to leverage CytoDL to:\n",
     "\n",
-    "A. Get single cell and nucleus instance segmentations from image datasets from the Allen Institute from Cell Science [1, 2]\n",
+    "A. Get single cell and nucleus instance segmentations from image datasets from the Allen Institute from Cell Science [1]\n",
     "\n",
-    "B. Use the single cell images from (A) to extract unsupervised features to detect morphological perturbations of intracellular structures [2].\n",
+    "B. Use the single cell images from (A) to extract unsupervised features to detect morphological perturbations of intracellular structures [1].\n",
     "\n",
-    "[1] - Viana, Matheus P., et al. \"Integrated intracellular organization and its variations in human iPS cells.\" Nature 613.7943 (2023): 345-354.\n",
-    "\n",
-    "[2] - Donovan-Maiye, Rory M., et al. \"A deep generative model of 3D single-cell organization.\" PLOS Computational Biology 18.1 (2022): e1009155.\n"
+    "[1] - Donovan-Maiye, Rory M., et al. \"A deep generative model of 3D single-cell organization.\" PLOS Computational Biology 18.1 (2022): e1009155.\n"
    ]
   },
   {
