add hydra omegaconf explainer

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -85,6 +85,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Quick intro to hydra and omegaconf\n",
+    "[hydra](https://hydra.cc) and [omegaconf](https://omegaconf.readthedocs.io/en/2.3_branch/) provide the flexibility underlying the configuration files in CytoDL. There are two important pieces of syntax to understand.\n",
+    "\n",
+    "1. `_target_` \n",
+    "In the configuration file, `_target_` is used to specify the class that will be instantiated. All arguments underneath `_target_` will be passed to the class constructor. So in a config, \n",
+    "```yaml\n",
+    "_target_: numpy.array\n",
+    "object: [1,2,3]\n",
+    "```   \n",
+    "is equivalent to the python code\n",
+    "```python\n",
+    "numpy.array(object=[1,2,3])\n",
+    "```\n",
+    "\n",
+    "2. OmegaConf interpolation `${}`\n",
+    "OmegaConf allows for interpolation of variables in the configuration file. For example, if you have a variable `path: /path/to/data`, you can use `${path}` to refer to the value of `path`. If a variable is used in the `experiment` config, it can be accessed without a prefix, but if it is located in the `data`, `model`, or other config, it must be accessed like `${data.var}`, `${model.var}` etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Models can be loaded by their configuration files, from a dictionary, or from one of the provided templates. When loading the configuration, overrides can be provided to change the configuration parameters.\n",
     "\n",
     "### Data Config\n",
