--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -625,12 +625,12 @@
     "    (raw_path/'seg').mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "    local_sample_path = WORKING_DIR/'local_data'/'meta.csv'\n",
+    "    # connect to quilt\n",
+    "    pkg = quilt3.Package.browse(\"aics/hipsc_single_cell_image_dataset\", registry=\"s3://allencell\")\n",
     "\n",
     "    try: \n",
     "        meta_df = pd.read_csv(local_sample_path)\n",
     "    except FileNotFoundError:\n",
-    "        # connect to quilt\n",
-    "        pkg = quilt3.Package.browse(\"aics/hipsc_single_cell_image_dataset\", registry=\"s3://allencell\")\n",
     "        meta_df = pkg[\"metadata.csv\"]().sample(n=n_subsample)\n",
     "        meta_df.to_csv(local_sample_path)\n",
     "\n",
@@ -892,8 +892,12 @@
    "outputs": [],
    "source": [
     "data = load_dataset()\n",
-    "    \n",
-    "train_model(WORKING_DIR/'configs/instance_seg_train.yaml', dataset=data, overrides={'trainer.max_epochs':1, \"paths.output_dir\": WORKING_DIR/'local_data'/'instance_seg_train'})"
+    "# switch to the cpu trainer if a GPU isn't available\n",
+    "overrides = overrides={'trainer.max_epochs':1, \"paths.output_dir\": WORKING_DIR/'local_data'/'instance_seg_train'}\n",
+    "if not torch.cuda.is_available():\n",
+    "    overrides['trainer.accelerator'] = 'cpu'\n",
+    "    overrides['trainer.devices'] = 1  \n",
+    "train_model(WORKING_DIR/'configs/instance_seg_train.yaml', dataset=data, overrides=overrides)"
    ]
   },
   {
