update model download

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -16,6 +16,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Download models (colab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contrastive_model_path = 'https://github.com/AllenCell/i2k_workshop_2024/releases/download/v0.1/contrastive_predict.ckpt'\n",
+    "instance_seg_model_path = 'https://github.com/AllenCell/i2k_workshop_2024/releases/download/v0.1/instance_seg_predict.ckpt'\n",
+    "\n",
+    "# Change this to the i2k_workshop_2024/assets/models folder if not on colab\n",
+    "dest_path = '/content/i2k_workshop_2024/assets/models' \n",
+    "! wget -P $dest_path $contrastive_model_path\n",
+    "! wget -P $dest_path $instance_seg_model_path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# I2K Workshop 2024"
    ]
   },
@@ -89,6 +111,7 @@
     "[hydra](https://hydra.cc) and [omegaconf](https://omegaconf.readthedocs.io/en/2.3_branch/) provide the flexibility underlying the configuration files in CytoDL. There are two important pieces of syntax to understand.\n",
     "\n",
     "1. `_target_` \n",
+    "\n",
     "In the configuration file, `_target_` is used to specify the class that will be instantiated. All arguments underneath `_target_` will be passed to the class constructor. So in a config, \n",
     "```yaml\n",
     "_target_: numpy.array\n",
@@ -100,6 +123,7 @@
     "```\n",
     "\n",
     "2. OmegaConf interpolation `${}`\n",
+    "\n",
     "OmegaConf allows for interpolation of variables in the configuration file. For example, if you have a variable `path: /path/to/data`, you can use `${path}` to refer to the value of `path`. If a variable is used in the `experiment` config, it can be accessed without a prefix, but if it is located in the `data`, `model`, or other config, it must be accessed like `${data.var}`, `${model.var}` etc."
    ]
   },
