make cpu training available

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -1036,9 +1036,12 @@
     "raw_fn = list((WORKING_DIR / 'local_data/raw').iterdir())[-1]\n",
     "data = [load_membrane(raw_fn)[None]]\n",
     "print('Example images loaded')\n",
+    "overrides = {'paths.output_dir': str(WORKING_DIR/'local_data/instance_seg_apply'), 'checkpoint.ckpt_path': str(WORKING_DIR/'assets/models/instance_seg_predict.ckpt')}\n",
+    "if not torch.cuda.is_available():\n",
+    "    overrides['trainer.accelerator'] = 'cpu'\n",
+    "    overrides['trainer.devices'] = 1  \n",
     "\n",
-    "pred = apply_instance_seg_model(WORKING_DIR/'configs'/'instance_seg_predict.yaml', data, overrides={'paths.output_dir': str(WORKING_DIR/'local_data/instance_seg_apply')})\n",
-    "\n",
+    "pred = apply_instance_seg_model(WORKING_DIR/'configs'/'instance_seg_predict.yaml', data, overrides=overrides)\n",
     "\n",
     "fig, ax= plt.subplots(1,2, figsize=(10,5))\n",
     "ax[0].imshow(data[0].squeeze()[30])\n",
@@ -1991,8 +1994,12 @@
     "    'train': [{'input': cell[None]} for cell in single_cells[:-2]],\n",
     "    'val': [{'input': cell[None]} for cell in single_cells[-2:]]\n",
     "}\n",
+    "overrides = {'trainer.max_epochs':10, \"paths.output_dir\": str(WORKING_DIR/'local_data'/'contrastive_train'), 'data.batch_size': 8}\n",
+    "if not torch.cuda.is_available():\n",
+    "    overrides['trainer.accelerator'] = 'cpu'\n",
+    "    overrides['trainer.devices'] = 1  \n",
     "    \n",
-    "train_model(WORKING_DIR/'configs/contrastive_train.yaml', dataset=data, overrides={'trainer.max_epochs':10, \"paths.output_dir\": str(WORKING_DIR/'local_data'/'contrastive_train'), 'data.batch_size': 8})"
+    "train_model(WORKING_DIR/'configs/contrastive_train.yaml', dataset=data, overrides=overrides)"
    ]
   },
   {
@@ -2392,7 +2399,12 @@
    "source": [
     "data = [{'cell': cell[None], 'Gene': 'test_gene', 'drug_label': 'vehicle', 'basename': 'testimg.tif'} for cell in single_cells]\n",
     "\n",
-    "apply_vicreg_model(WORKING_DIR/'configs'/'contrastive_predict.yaml', data, overrides={'paths.output_dir': str(WORKING_DIR/'local_data/contrastive_apply')})\n",
+    "overrides = {'paths.output_dir': str(WORKING_DIR/'local_data/contrastive_apply')}\n",
+    "if not torch.cuda.is_available():\n",
+    "    overrides['trainer.accelerator'] = 'cpu'\n",
+    "    overrides['trainer.devices'] = 1\n",
+    "\n",
+    "apply_vicreg_model(WORKING_DIR/'configs'/'contrastive_predict.yaml', data, overrides=overrides)\n",
     "\n",
     "predictions= pd.read_csv(WORKING_DIR/'local_data/contrastive_apply'/'predictions.csv')\n",
     "predictions.head()\n"
