update single cell download

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -29,9 +29,15 @@
     "instance_seg_model_path = 'https://github.com/AllenCell/i2k_workshop_2024/releases/download/v0.1/instance_seg_predict.ckpt'\n",
     "\n",
     "# Change this to the i2k_workshop_2024/assets/models folder if not on colab\n",
-    "dest_path = '/content/i2k_workshop_2024/assets/models' \n",
+    "# dest_path = '/content/i2k_workshop_2024/assets/models' \n",
+    "dest_path = './assets/models'\n",
     "! wget -P $dest_path $contrastive_model_path\n",
-    "! wget -P $dest_path $instance_seg_model_path"
+    "! wget -P $dest_path $instance_seg_model_path\n",
+    "\n",
+    "# download single cells for latent walks\n",
+    "! wget -P /content/i2k_workshop_2024/assets https://github.com/AllenCell/i2k_workshop_2024/releases/download/v0.1/single_cells.zip\n",
+    "! unzip /content/i2k_workshop_2024/assets/single_cells.zip -d /content/i2k_workshop_2024/assets/\n",
+    "! rm /content/i2k_workshop_2024/assets/single_cells.zip"
    ]
   },
   {
@@ -2379,7 +2385,7 @@
    "source": [
     "data = [{'cell': cell[None], 'Gene': 'test_gene', 'drug_label': 'vehicle', 'basename': 'testimg.tif'} for cell in single_cells]\n",
     "\n",
-    "overrides = {'paths.output_dir': str(WORKING_DIR/'local_data/contrastive_apply')}\n",
+    "overrides = {'paths.output_dir': str(WORKING_DIR/'local_data/contrastive_apply'), 'checkpoint.ckpt_path': str(WORKING_DIR/'assets/models/contrastive_predict.ckpt')}\n",
     "if not torch.cuda.is_available():\n",
     "    overrides['trainer.accelerator'] = 'cpu'\n",
     "    overrides['trainer.devices'] = 1\n",
