use local paths to single cells

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "B. Use the single cell images from (A) to extract unsupervised features to detect morphological perturbations of intracellular structures [1].\n",
     "\n",
-    "[1] - Donovan-Maiye, Rory M., et al. \"A deep generative model of 3D single-cell organization.\" PLOS Computational Biology 18.1 (2022): e1009155.\n"
+    "[1] Donovan-Maiye, Rory M., et al. \"A deep generative model of 3D single-cell organization.\" PLOS Computational Biology 18.1 (2022): e1009155.\n"
    ]
   },
   {
@@ -2436,7 +2436,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "def load_features():\n",
-    "    return pd.read_csv(WORKING_DIR/'assets/features/predictions.csv')\n",
+    "    df = pd.read_csv(WORKING_DIR/'assets/features/predictions_local_path.csv')\n",
+    "    df['path'] = df['path'].apply(lambda s: f'{WORKING_DIR}/assets/single_cells/{s}')\n",
+    "    return df\n",
     "\n",
     "def get_feature_columns():\n",
     "    return [str(i) for i in range(256)]\n",
