update lda plots

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -2603,21 +2603,25 @@
     "    # Plot movie\n",
     "    plt.figure(figsize=(20, 5))\n",
     "    plt.imshow(movie, cmap='gray')\n",
-    "    plt.axis('off')\n",
+    "\n",
+    "    num_ticks = min(len(walk), 10)  # Limit the number of ticks to avoid overcrowding\n",
+    "    tick_positions = np.linspace(0, movie.shape[1], num_ticks)\n",
+    "    tick_labels = [str(np.round(x, 2)) for x in np.linspace(walk[0], walk[-1], num_ticks)]\n",
     "    \n",
     "    # Set xticks with coordinates in w\n",
-    "    plt.xticks(np.linspace(0, movie.shape[1], len(walk)), \n",
-    "               labels=np.round(walk, 2), \n",
-    "               rotation=45, ha='right')\n",
+    "    plt.xticks(tick_positions, labels=tick_labels, rotation=45, ha='right')\n",
+    "    plt.yticks([])\n",
+    "\n",
     "    \n",
-    "    plt.xlabel('LDA coordinates', fontsize=12)\n",
+    "    plt.xlabel('PC coordinates', fontsize=12)\n",
     "    plt.ylabel(\"Nearest Neighbors\", fontsize=12)\n",
     "    plt.title(f'{gene} x {drug} latent walk', fontsize=14, fontweight='bold')\n",
     "    \n",
     "    # Add colorbar\n",
     "    plt.colorbar(label='Pixel Intensity')\n",
+    "    plt.grid(False)\n",
     "    \n",
-    "    plt.tight_layout()\n",
+    "    plt.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
     "    plt.show()"
    ]
   },
