add other cytodl features

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -1984,7 +1984,8 @@
     "if not torch.cuda.is_available():\n",
     "    overrides['trainer.accelerator'] = 'cpu'\n",
     "    overrides['trainer.devices'] = 1  \n",
-    "    \n",
+    "    overrides['trainer.precision']= 32\n",
+    "\n",
     "train_model(WORKING_DIR/'configs/contrastive_train.yaml', dataset=data, overrides=overrides)"
    ]
   },
@@ -2788,6 +2789,27 @@
    "metadata": {},
    "source": [
     "s-Nitro-Blebbistatin treatment causes a similar dissolution of the Golgi apparatus, from clusters of puncta to a diffuse and blobby morphology. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What else does CytoDL offer?\n",
+    "### Supervised Learning\n",
+    "- Semantic segmentation\n",
+    "- Instance segmentation\n",
+    "- Classification\n",
+    "- conditional GAN for image-to-image translation\n",
+    "- Labelfree prediction (Brightfield to Fluorescence)\n",
+    "\n",
+    "### Unsupervised Learning\n",
+    "- Contrastive learning\n",
+    "- Masked image modeling (Hiera and MAE)\n",
+    "- Joint Embedding Predictive Architecture (JEPA)\n",
+    "- Variational Autoencoders (images, point clouds, tabular data)\n",
+    "\n",
+    "### Napari Plugin for Human-in-the-loop dataset annotation and model training/evaluation\n"
    ]
   }
  ],
