crop example instance seg image

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -930,11 +930,13 @@
    "source": [
     "data = load_dataset()\n",
     "# switch to the cpu trainer if a GPU isn't available\n",
-    "overrides = overrides={'trainer.max_epochs':1, \"paths.output_dir\": WORKING_DIR/'local_data'/'instance_seg_train'}\n",
+    "overrides = overrides={'trainer.max_epochs':5, \"paths.output_dir\": WORKING_DIR/'local_data'/'instance_seg_train'}\n",
     "if not torch.cuda.is_available():\n",
     "    overrides['trainer.accelerator'] = 'cpu'\n",
     "    overrides['trainer.devices'] = 1  \n",
-    "train_model(WORKING_DIR/'configs/instance_seg_train.yaml', dataset=data, overrides=overrides)"
+    "train_model(WORKING_DIR/'configs/instance_seg_train.yaml', dataset=data, overrides=overrides)\n",
+    "metrics = pd.read_csv(WORKING_DIR/'local_data/instance_seg_train/csv/version_0/metrics.csv')\n",
+    "plt.plot(metrics['train/loss/seg_epoch'])"
    ]
   },
   {
@@ -1020,8 +1022,9 @@
     "    return preds\n",
     "\n",
     "raw_fn = list((WORKING_DIR / 'local_data/raw').iterdir())[-1]\n",
-    "data = [load_membrane(raw_fn)[None]]\n",
+    "data = [load_membrane(raw_fn)[None, :, :256, :256]]\n",
     "print('Example images loaded')\n",
+    "\n",
     "overrides = {'paths.output_dir': str(WORKING_DIR/'local_data/instance_seg_apply'), 'checkpoint.ckpt_path': str(WORKING_DIR/'assets/models/instance_seg_predict.ckpt')}\n",
     "if not torch.cuda.is_available():\n",
     "    overrides['trainer.accelerator'] = 'cpu'\n",
@@ -2393,7 +2396,7 @@
     "\n",
     "apply_vicreg_model(WORKING_DIR/'configs'/'contrastive_predict.yaml', data, overrides=overrides)\n",
     "\n",
-    "predictions= pd.read_csv(WORKING_DIR/'local_data/contrastive_apply'/'predictions.csv')\n",
+    "predictions= pd.read_csv(WORKING_DIR/'local_data/contrastive_apply/predict.csv')\n",
     "predictions.head()\n"
    ]
   },
