address Erins comments

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -29,14 +29,14 @@
     "instance_seg_model_path = 'https://github.com/AllenCell/i2k_workshop_2024/releases/download/v0.1/instance_seg_predict.ckpt'\n",
     "\n",
     "# Change this to the i2k_workshop_2024/assets/models folder if not on colab\n",
-    "# dest_path = '/content/i2k_workshop_2024/assets/models' \n",
-    "dest_path = './assets/models'\n",
+    "# dest_path = './assets/models'\n",
+    "dest_path = '/content/i2k_workshop_2024/assets/models' \n",
     "! wget -P $dest_path $contrastive_model_path\n",
     "! wget -P $dest_path $instance_seg_model_path\n",
     "\n",
     "# download single cells for latent walks\n",
     "! wget -P /content/i2k_workshop_2024/assets https://github.com/AllenCell/i2k_workshop_2024/releases/download/v0.1/single_cells.zip\n",
-    "! unzip /content/i2k_workshop_2024/assets/single_cells.zip -d /content/i2k_workshop_2024/assets/\n",
+    "! unzip -o /content/i2k_workshop_2024/assets/single_cells.zip -d /content/i2k_workshop_2024/assets/\n",
     "! rm /content/i2k_workshop_2024/assets/single_cells.zip"
    ]
   },
@@ -83,16 +83,6 @@
     "CytoDL models are most commonly used from the CLI, for the sake of this notebook we will use the API (in beta) to showcase its programmatic use. \n",
     "\n",
     "First, we will load a model from its configuration file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = 'MIG-8f3b2a99-4e01-5b69-8b78-dbd3c9fe2a83'"
    ]
   },
   {
@@ -936,7 +926,9 @@
     "    overrides['trainer.devices'] = 1  \n",
     "train_model(WORKING_DIR/'configs/instance_seg_train.yaml', dataset=data, overrides=overrides)\n",
     "metrics = pd.read_csv(WORKING_DIR/'local_data/instance_seg_train/csv/version_0/metrics.csv')\n",
-    "plt.plot(metrics['train/loss/seg_epoch'])"
+    "plt.plot(metrics['train/loss/seg_epoch'])\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss')"
    ]
   },
   {
