add cytodl overview figure

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -76,7 +76,9 @@
     "1. Identifying common structural components​ of these projects​,\n",
     "2. Providing new components and making incorporation of open-source components easy, and  ​\n",
     "3. Providing recipes for combining custom and open source components​\n",
-    "​\n",
+    "\n",
+    "​![image.png](./assets/images/CytoDL-overview_dark_.png)\n",
+    "\n",
     "\n",
     "Using the configurability of [hydra](https://hydra.cc/), CytoDL allows users to easily switch between different models, datasets, and training configurations. CytoDL also provides a set of project templates to quickly train 2D and 3D models for in-silico labeling, semantic and instance segmentation, classification, contrastive learning, and masked image modeling. To better understand the capabilities of CytoDL, let's first examine the configuration file for a single experiment training an instance segmentation model. \n",
     "\n",
