update download paths

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -28,16 +28,15 @@
     "contrastive_model_path = 'https://github.com/AllenCell/i2k_workshop_2024/releases/download/v0.1/contrastive_predict.ckpt'\n",
     "instance_seg_model_path = 'https://github.com/AllenCell/i2k_workshop_2024/releases/download/v0.1/instance_seg_predict.ckpt'\n",
     "\n",
-    "# Change this to the i2k_workshop_2024/assets/models folder if not on colab\n",
-    "# dest_path = './assets/models'\n",
-    "dest_path = '/content/i2k_workshop_2024/assets/models' \n",
+    "dest_path = './assets/models'\n",
+    "\n",
     "! wget -P $dest_path $contrastive_model_path\n",
     "! wget -P $dest_path $instance_seg_model_path\n",
     "\n",
     "# download single cells for latent walks\n",
-    "! wget -P /content/i2k_workshop_2024/assets https://github.com/AllenCell/i2k_workshop_2024/releases/download/v0.1/single_cells.zip\n",
-    "! unzip -o /content/i2k_workshop_2024/assets/single_cells.zip -d /content/i2k_workshop_2024/assets/\n",
-    "! rm /content/i2k_workshop_2024/assets/single_cells.zip"
+    "! wget -P ./assets https://github.com/AllenCell/i2k_workshop_2024/releases/download/v0.1/single_cells.zip\n",
+    "! unzip -o ./assets/single_cells.zip -d ./assets/\n",
+    "! rm ./assets/single_cells.zip"
    ]
   },
   {
