incorporate team feedback

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -1,22 +1,35 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# UNCOMMENT AND RUN IF IN COLAB\n",
-    "# ! git clone https://github.com/AllenCell/i2k_workshop_2024.git\n",
-    "# %cd i2k_workshop_2024\n",
-    "# ! pip install -r requirements.txt"
+    "# Run these first!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Download models (colab)"
+    "### Clone repo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! git clone https://github.com/AllenCell/i2k_workshop_2024.git\n",
+    "%cd i2k_workshop_2024\n",
+    "! pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download models"
    ]
   },
   {
@@ -43,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Download dataset examples"
+    "### Download dataset examples"
    ]
   },
   {
@@ -93,17 +106,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# I2K Workshop 2024"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "source": [
+    "# I2K Workshop 2024\n",
+    "\n",
+    "## Overview\n",
+    "#### 1 - CytoDL overview\n",
+    "#### 2 - Instance segmentation training \n",
+    "#### 3 - Single cell dataset creation\n",
+    "#### 3 - VICReg model training\n",
+    "#### 4 - Unsupervised perturbation analysis \n",
+    "\n",
     "This hands-on workshop will introduce you to CytoDL, a powerful deep learning framework developed by the Allen Institute for Cell Science. CytoDL is designed to streamline the analysis of biological images, including 2D and 3D data represented as images, point clouds, and tabular formats.\n",
     "You will learn how to leverage CytoDL to:\n",
     "\n",
@@ -169,7 +180,21 @@
     "\n",
     "2. OmegaConf interpolation `${}`\n",
     "\n",
-    "OmegaConf allows for interpolation of variables in the configuration file. For example, if you have a variable `path: /path/to/data`, you can use `${path}` to refer to the value of `path`. If a variable is used in the `experiment` config, it can be accessed without a prefix, but if it is located in the `data`, `model`, or other config, it must be accessed like `${data.var}`, `${model.var}` etc."
+    "OmegaConf allows for interpolation of variables in the configuration file. For example, if you have a variable `path: /path/to/data`, you can use `${path}` to refer to the value of `path`. If a variable is used in the `experiment` config, it can be accessed without a prefix, but if it is located in the `data`, `model`, or other config, it must be accessed like `${data.var}`, `${model.var}` etc.\n",
+    "\n",
+    "First, we will load a model from its configuration file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cyto_dl.api import CytoDLModel\n",
+    "\n",
+    "model = CytoDLModel()\n",
+    "model.load_config_from_file(WORKING_DIR/'configs/instance_seg_train.yaml')"
    ]
   },
   {
@@ -823,14 +848,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Model training\n",
+    "2. Model training\n",
     "\n",
-    "Now that we have a few examples of the dataset downloaded and we understand the format of the instance segmentation ground truth, we can start model training. To keep things quick, we'll just train for 1 epoch. In practice, you would want to train for many more epochs. Notice how we can provide overrides to the training function to allow programmatic manipulation of the configuration."
+    "Now that we have a few examples of the dataset downloaded and we understand the format of the instance segmentation ground truth, we can start model training. To keep things quick, we'll just train for 5 epochs. In practice, you would want to train for many more epochs. Notice how we can provide overrides to the training function to allow programmatic manipulation of the configuration."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2239,6 +2264,7 @@
     "- Masked image modeling (Hiera and MAE)\n",
     "- Joint Embedding Predictive Architecture (JEPA)\n",
     "- Variational Autoencoders (images, point clouds, tabular data)\n",
+    "- Rotation equivariant models\n",
     "\n",
     "### Napari Plugin for Human-in-the-loop dataset annotation and model training/evaluation\n"
    ]
